// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ArticleCard default view 1`] = `
<div
  className="card-wrapper"
>
  <div
    className="card"
  >
    <img
      alt="Article cover"
      className="card__thumbnail"
      src="https://i.postimg.cc/HnL9DLBq/gymnastics-1284656-1920.jpg"
    />
    <div
      className="card__body"
    >
      <h4
        className="card__body__category"
      >
        
      </h4>
      <h2
        className="card__body__title"
      >
        
      </h2>
      <div
        className="card__body__summary"
      >
        <p>
          
        </p>
      </div>
    </div>
    <div
      className="card__footer"
    >
      <img
        alt="loading..."
        className="card__footer__user-avatar"
        src="https://randomuser.me/api/portraits/men/32.jpg"
      />
      <div
        className="card__footer__views-holder"
      >
        <img
          alt="loading..."
          src="test-file-stub"
        />
        <span
          className="card__footer__total-views"
        >
          50
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ArticleCard with some props 1`] = `
<div
  className="card-wrapper"
>
  <div
    className="card"
  >
    <img
      alt="Article cover"
      className="card__thumbnail"
      src="https://i.postimg.cc/HnL9DLBq/gymnastics-1284656-1920.jpg"
    />
    <div
      className="card__body"
    >
      <h4
        className="card__body__category"
      >
        History
      </h4>
      <h2
        className="card__body__title"
      >
        This is the Card title.
      </h2>
      <div
        className="card__body__summary"
      >
        <p>
          The summary of the article is displayed on the card body.
        </p>
      </div>
    </div>
    <div
      className="card__footer"
    >
      <img
        alt="loading..."
        className="card__footer__user-avatar"
        src="https://randomuser.me/api/portraits/men/32.jpg"
      />
      <div
        className="card__footer__views-holder"
      >
        <img
          alt="loading..."
          src="test-file-stub"
        />
        <span
          className="card__footer__total-views"
        >
          50
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button add custom class 1`] = `
<button
  className="button__round"
  id=""
  onClick={[Function]}
  type="button"
>
  auth
</button>
`;

exports[`Storyshots Button with Login text 1`] = `
<button
  className="button__primary"
  id=""
  onClick={[Function]}
  type="button"
>
  Sign In
</button>
`;

exports[`Storyshots Button with submit text 1`] = `
<button
  className="button__primary"
  id=""
  onClick={[Function]}
  type="button"
>
  Submit
</button>
`;

exports[`Storyshots Button without classname prop 1`] = `
<button
  className="button__primary"
  id=""
  onClick={[Function]}
  type="button"
>
  no class
</button>
`;

exports[`Storyshots Icon active 1`] = `
<button
  aria-label="upvote"
  className="icon icon--upvote icon--active"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
/>
`;

exports[`Storyshots Icon downvote 1`] = `
<button
  aria-label="downvote"
  className="icon icon--downvote"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
/>
`;

exports[`Storyshots Icon upvote 1`] = `
<button
  aria-label="upvote"
  className="icon icon--upvote"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
/>
`;

exports[`Storyshots Input field with email name 1`] = `
<label
  className="input__label"
  htmlFor="email"
>
  <input
    className="input__field"
    name="email"
    onChange={[Function]}
    placeholder="Email"
    required="required"
    type="text"
  />
</label>
`;

exports[`Storyshots Input password field 1`] = `
<label
  className="input__label"
  htmlFor="email"
>
  <input
    className="input__field"
    name="email"
    onChange={[Function]}
    placeholder="Password"
    required="required"
    type="password"
  />
</label>
`;

exports[`Storyshots Signin sign in form 1`] = `
<form
  className="login-form"
  onSubmit={[Function]}
>
  <div
    className="login-form__success login-form__success--hide"
  >
    SIGNIN SUCCESSFUL !
  </div>
  <label
    className="input__label"
    htmlFor="email"
  >
    <input
      className="input__field"
      name="email"
      onChange={[Function]}
      placeholder="Email Address"
      required="required"
      type="text"
    />
  </label>
  <label
    className="input__label"
    htmlFor="password"
  >
    <input
      className="input__field"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      required="required"
      type="password"
    />
  </label>
  <section
    className="login-form__errors"
  />
  <section
    className="login-form__submit-btn"
  >
    <button
      className="button__primary"
      id=""
      type="submit"
    >
      Sign In
    </button>
  </section>
</form>
`;

exports[`Storyshots Vote downvoted 1`] = `
<div
  className="vote"
>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="upvote"
      className="icon icon--upvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      29
    </span>
  </div>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="downvote"
      className="icon icon--downvote icon--active"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className="active"
    >
      11
    </span>
  </div>
</div>
`;

exports[`Storyshots Vote nullvote 1`] = `
<div
  className="vote"
>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="upvote"
      className="icon icon--upvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      29
    </span>
  </div>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="downvote"
      className="icon icon--downvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      10
    </span>
  </div>
</div>
`;

exports[`Storyshots Vote upvoted 1`] = `
<div
  className="vote"
>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="upvote"
      className="icon icon--upvote icon--active"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className="active"
    >
      30
    </span>
  </div>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="downvote"
      className="icon icon--downvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      10
    </span>
  </div>
</div>
`;
